[gd_scene load_steps=12 format=2]

[ext_resource path="res://environments/env_assets/tree2.tscn" type="PackedScene" id=1]
[ext_resource path="res://environments/env_assets/tree3.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://environments/tutorial/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://environments/tutorial/TutorialHUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/enemies/Mob.tscn" type="PackedScene" id=6]
[ext_resource path="res://spells/SpellManager.gd" type="Script" id=7]
[ext_resource path="res://art/sounds/spell_sound.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 149.75, 300 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 193.062, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 167.5, 299.25 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0470588, 0.372549, 0.0823529, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 60, 60 )
scale = Vector2( 0.75, 0.75 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="SpellManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="SpellSound" type="AudioStreamPlayer2D" parent="SpellManager"]
stream = ExtResource( 8 )

[node name="TreeLine1" type="Node2D" parent="."]

[node name="tree2" parent="TreeLine1" instance=ExtResource( 1 )]
position = Vector2( 178, 61 )

[node name="tree3" parent="TreeLine1" instance=ExtResource( 1 )]
position = Vector2( 219, 123 )

[node name="tree4" parent="TreeLine1" instance=ExtResource( 2 )]
position = Vector2( 169, 150 )

[node name="tree7" parent="TreeLine1" instance=ExtResource( 1 )]
position = Vector2( 208, 193 )

[node name="tree5" parent="TreeLine1" instance=ExtResource( 2 )]
position = Vector2( 245, 242 )

[node name="tree6" parent="TreeLine1" instance=ExtResource( 2 )]
position = Vector2( 175, 272 )

[node name="tree8" parent="TreeLine1" instance=ExtResource( 1 )]
position = Vector2( 177, 320 )

[node name="tree9" parent="TreeLine1" instance=ExtResource( 1 )]
position = Vector2( 235, 357 )

[node name="tree10" parent="TreeLine1" instance=ExtResource( 1 )]
position = Vector2( 170, 523 )

[node name="tree11" parent="TreeLine1" instance=ExtResource( 2 )]
position = Vector2( 244, 539 )

[node name="FirstArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstArea"]
position = Vector2( 150.25, 300 )
shape = SubResource( 1 )

[node name="SecondArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondArea"]
position = Vector2( 493.938, 300 )
shape = SubResource( 2 )

[node name="ThirdArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdArea"]
position = Vector2( 855.5, 299.75 )
shape = SubResource( 3 )

[node name="Mob" parent="." instance=ExtResource( 6 )]
position = Vector2( 894, 300 )
scale = Vector2( 1.5, 1.5 )

[node name="TreeLine2" type="Node2D" parent="."]

[node name="tree10" parent="TreeLine2" instance=ExtResource( 1 )]
position = Vector2( 686, 300 )

[node name="tree11" parent="TreeLine2" instance=ExtResource( 2 )]
position = Vector2( 760, 316 )

[node name="tree2" parent="TreeLine2" instance=ExtResource( 1 )]
position = Vector2( 695, 365 )

[node name="tree3" parent="TreeLine2" instance=ExtResource( 1 )]
position = Vector2( 736, 427 )

[node name="tree4" parent="TreeLine2" instance=ExtResource( 2 )]
position = Vector2( 686, 454 )

[node name="tree7" parent="TreeLine2" instance=ExtResource( 1 )]
position = Vector2( 725, 497 )

[node name="tree5" parent="TreeLine2" instance=ExtResource( 2 )]
position = Vector2( 762, 546 )

[node name="tree6" parent="TreeLine2" instance=ExtResource( 2 )]
position = Vector2( 727, 52 )

[node name="tree8" parent="TreeLine2" instance=ExtResource( 1 )]
position = Vector2( 784, 95 )

[node name="tree9" parent="TreeLine2" instance=ExtResource( 1 )]
position = Vector2( 751, 134 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TutorialHUD" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 60, 60 )
scale = Vector2( 0.75, 0.75 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 600
smoothing_enabled = true

[connection signal="player_cast_spell" from="Player" to="SpellManager" method="handle_spell_spawned"]
[connection signal="area_entered" from="FirstArea" to="." method="_on_FirstArea_area_entered"]
[connection signal="area_exited" from="FirstArea" to="." method="_on_FirstArea_area_exited"]
[connection signal="area_entered" from="SecondArea" to="." method="_on_SecondArea_area_entered"]
[connection signal="area_exited" from="SecondArea" to="." method="_on_SecondArea_area_exited"]
[connection signal="area_entered" from="ThirdArea" to="." method="_on_ThirdArea_area_entered"]
[connection signal="area_exited" from="ThirdArea" to="." method="_on_ThirdArea_area_exited"]
[connection signal="mob_cast_spell" from="Mob" to="SpellManager" method="_on_Mob_mob_cast_spell"]
[connection signal="mob_killed" from="Mob" to="." method="_on_Mob_mob_killed"]
